change seed path

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -40,12 +40,4 @@ models:
       +materialized: view 
 
 seeds:
-  - name: customers
-    config:
-      schema: raw
-  - name: orders
-    config:
-      schema: raw
-  - name: payments
-    config:
-      schema: raw
+  +schema: seed_data
